Respect theme colors for new tab-loading animation

Uses 12% opacity of white / black for the placeholder depending on contrast
instead of hard-coding GoogleBlue100. For the bouncing pill, use theme colors
previously used for the spinner.

Bug: chromium:903457
Change-Id: I6dd46ac516a8fef874ecdf95bcaef3b57d7a5974
Reviewed-on: https://chromium-review.googlesource.com/c/1327422
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606620}
Former-commit-id: 4940aa0a3252a388c248026706f9f8f06abe7767